# boo-tauri2

./: .gitignore  package-lock.json  package.json  postcss.config.js  tailwind.config.mjs  vite.config.ts
scripts/: sync-version.mjs
src/: app.css  app.html  style.css  style.pcss  style.scss
src-tauri/: 2  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json  mobile.json
src-tauri/src/: boo_http.rs  cert_verifier.rs  lib.rs  main.rs  mdns.rs  media_proxy.rs
src/lib/: Icons.ts
src/lib/component/: AVPlayer.svelte  AudioPlayer.svelte  CategoryList.svelte  ImageViewer.svelte  MediaHandler.ts  PlayList.svelte  PlayListFooter.svelte  PlayerSlider.svelte  VideoPlayer.svelte
src/lib/dialog/: Dialog.svelte  DialogViewModel.svelte.ts  HostDialogContent.svelte  PasswordDialogContent.svelte  SortDialogContent.svelte  SystemDialogContent.svelte
src/lib/model/: ActiveHostTracker.svelte.ts  BooError.ts  ChapterUtils.ts  ChaptersViewModel.svelte.ts  ConnectionManager.ts  CursorConcealer.svelte.ts  DebugLog.svelte.ts  HostDiscovery.svelte.ts  HostInfo.ts  HostInfoList.svelte.ts  ModelDef.ts  PasswordViewModel.svelte.ts  PlayerViewModel.svelte.ts  Preferences.ts  Settings.svelte.ts  SortViewModel.svelte.ts  UpdateList.svelte.ts  ViewModel.svelte.ts
src/lib/model/kvs/: IKVS.ts  OnMemoryStroe.ts  TauriStore.ts
src/lib/model/watcher/: ConnectionManager.ts  NewArrivalWatcher.ts  PeriodicalTask.ts
src/lib/panel/: DebugPanel.svelte  MediaControlPanel.svelte  Player.svelte  SidePanel.svelte  TitleBar.svelte  UpdateListPanel.svelte
src/lib/primitive/: IconButton.svelte  SvgIcon.svelte  Viewbox.svelte  ZoomView.svelte
src/lib/protocol/: AuthInfo.svelte.ts  Authentication.ts  BooProtocol.ts  IBooProtocol.ts  PairingUri.ts
src/lib/tauri/: TauriEvent.ts  TauriMdns.ts  TauriMediaProxy.ts  TauriObject.ts  TauriShortcut.ts  TauriShortcutMediator.ts
src/lib/utils/: Env.ts  GestureRecognizer.ts  Hash.ts  IDisposable.ts  KeyEvents.ts  Lazy.ts  Listeners.ts  TimingSwitch.ts  Utils.ts  WakeLocker.ts
src/routes/: +layout.svelte  +page.svelte
