[package]
name = "bootauri2"
# このバージョン番号は package.json の version を単一の真実として
# `npm --ignore-scripts=false version <new>` 実行時に
# scripts/sync-version.mjs が自動同期する（.npmrc の ignore-scripts=true で
# lifecycle hook がデフォルト無効化されているため、bump 時だけフラグで上書き）。
# 直接編集する場合は package.json と Cargo.lock の bootauri2 エントリも
# 同じバージョンに揃えること（さもないと cargo / tauri build が不整合になる）。
version = "1.0.0"
description = "Boo Player with Tauri2"
authors = ["io.github.toyota32k"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "bootauri2_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-store = "2"
mdns-sd = "0.20"
if-addrs = "0.15"

# Step 2: HTTPS pinning + media proxy
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls-manual-roots", "stream", "http2"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
rustls-pki-types = "1"
rustls-native-certs = "0.8"
webpki = { package = "rustls-webpki", version = "0.103", default-features = false, features = ["std", "ring"] }
webpki-roots = "1"
sha2 = "0.10"
subtle = "2"
axum = { version = "0.8", default-features = false, features = ["tokio", "http1"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "net"] }
tokio-util = { version = "0.7", features = ["io"] }
hex = "0.4"
rand = "0.8"
futures-util = "0.3"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2"

[target.'cfg(any(target_os = "android", target_os = "ios"))'.dependencies]
tauri-plugin-barcode-scanner = "2"

